deploy/02-container-concepts-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-concepts-demo
  namespace: container-concepts-demo
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: container-concepts-demo
