deploy/03-container-concepts-demo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: "true"
  name: container-concepts-demo
  namespace: container-concepts-demo
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: container-concepts-demo
    weight: 100
  wildcardPolicy: None
  tls:
    termination: Edge
